# Load-balancer

./: Cargo.toml  Dockerfile  compose.yaml
src/: main.rs
src/modules/: mod.rs  response.rs  router.rs  routing_service.rs  state.rs
src/modules/services/: hello_service.rs  mod.rs  simulate_load.rs
