[package]
name = "load-balancing-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
http = "1.3.1"
once_cell = "1.21.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"]}
tokio = { version = "1.44.1", features = ["full"]}
